# secretlens

./: .env.example  .gitignore  INSTALL.md  LICENSE  Makefile  README.md  install.ps1  install.sh  pyproject.toml  requirements.txt  setup.py
examples/test_repository/: README.md  config.py  docker-compose.yml  test_secrets.txt
secretlens/: __init__.py  __main__.py  cli.py  enhanced_scanner.py  gitleaks_integration.py  llm_analyzer.py  models.py  ollama_manager.py
