[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "secretlens"
version = "0.1.0"
description = "LLM-Enhanced Secret Detection Tool"
readme = "README.md"
license = {file = "LICENSE"}
authors = [
    {name = "SecretLens Team", email = "contact@secretlens.dev"}
]
maintainers = [
    {name = "SecretLens Team", email = "contact@secretlens.dev"}
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Topic :: Security",
    "Topic :: Software Development :: Quality Assurance",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]
requires-python = ">=3.8"
dependencies = [
    "click>=8.0.0",
    "pydantic>=2.0.0",
    "rich>=13.0.0",
    "typing-extensions>=4.0.0",
    "requests>=2.31.0",
    "psutil>=5.9.0",
    "python-magic>=0.4.27",
    "chardet>=5.2.0",
    "regex>=2023.0.0",
    "entropy>=0.1.0",
    "GitPython>=3.1.0",
    "pathspec>=0.11.0",
    "pandas>=2.0.0",
    "numpy>=1.24.0",
    "pyyaml>=6.0.0",
    "python-dotenv>=1.0.0",
]

[project.optional-dependencies]
llm = [
    "openai>=1.3.0",
    "anthropic>=0.7.0",
]
dev = [
    "pytest>=7.4.0",
    "pytest-asyncio>=0.21.0",
    "black>=23.0.0",
    "isort>=5.12.0",
    "mypy>=1.5.0",
    "pre-commit>=3.0.0",
]
all = [
    "secretlens[llm,dev]"
]

[project.scripts]
secretlens = "secretlens.cli:cli"

[project.urls]
Homepage = "https://github.com/secretlens/secretlens"
Repository = "https://github.com/secretlens/secretlens"
Issues = "https://github.com/secretlens/secretlens/issues"

[tool.setuptools.packages.find]
where = ["."]
include = ["secretlens*"]

[tool.setuptools.package-data]
secretlens = ["py.typed"]

[tool.black]
line-length = 88
target-version = ['py38']
extend-exclude = '''
/(
  # directories
  \.eggs
  | \.git
  | \.hg
  | \.mypy_cache
  | \.tox
  | \.venv
  | build
  | dist
)/
'''

[tool.isort]
profile = "black"
multi_line_output = 3
line_length = 88
include_trailing_comma = true
force_grid_wrap = 0
use_parentheses = true
ensure_newline_before_comments = true

[tool.mypy]
python_version = "3.8"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
check_untyped_defs = true
warn_redundant_casts = true
warn_unused_ignores = true
show_column_numbers = true
show_error_codes = true

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py", "*_test.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = "-v --tb=short" 